assets/scss/elements/_stacked-images.scss
// mark {
//   background-color: #FFFF00;
//   border: 1px dashed #FFFF00;
// }

.reload-button {
  border: none;
  background-color: rgb(235 235 235);
  color: #b4b4b4;
  padding: 0.75rem 1.65rem;
  letter-spacing: 1px;
  text-transform: capitalize;
  transition: color 0.2s ease;
  cursor: pointer;
  appearance: none;
  position: absolute;
  top: 50%;
  left: 50%;
  display: flex;
  flex-direction: row;
  gap: 33px;
  transform: translate(-50%, -50%);
  .reload-icon {
    width: 17px;
    path {
      transition: fill 0.2s ease;
      fill: #bebebe;
    }
  }
  &:hover {
    color: #838383;
    .reload-icon {
      path {
        fill: #959595;
      }
    }
  }
}

.slyder-container {
  width: 21em;
  height: 100%;
  position: relative;
  // top: 2em;
  margin: 0 auto;
  max-width: calc(100vw - 6em);
}

.slyde {
  cursor: pointer;
  user-select: none;
  position: absolute;
  transform-origin: 10% 10%;
  border-radius: 5px;
  top: 50%;
  left: 50%;
  width: fit-content;
  min-width: 550px;
  height: auto;
  transition: 1s transform ease-in-out, 1s opacity ease-in-out,
    1.5s filter ease-in-out;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
  filter: sepia(25%);
  overflow: hidden;
  &:after {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: rgba(37, 32, 18, 0.173);
    z-index: 3;
    transition: background-color 1s ease-in-out;
  }
}

$zLayer: 10, 9, 8, 7, 6, 5, 4, 3, 2, 1;
@for $i from 1 through 10 {
  $rand: random(8) - 5;

  .slyde {
    &:nth-child(#{abs($i)}) {
      z-index: nth($zLayer, $i);
      transform: rotate(#{$rand}deg) translate(-50%, -50%);

      // &:before {
      //   content: "#{abs($i)}";
      // }

      &.leave {
        transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
        transform: rotate(#{$rand}deg) translate(-50%, -15rem);
        opacity: 0;
        pointer-events: none;
        filter: sepia(0%);
      }
    }

    &.in-view {
      transform: rotate(0) translate(-50%, -50%);
      filter: sepia(0%);
      &:after {
        background-color: transparent;
      }
    }
  }
}

//~ =============================
//~ ========== PHABLET ==========
//~ =============================

@media screen and (max-width: 992px) {
  .slyder-container {
    height: 500px;
    margin-bottom: 2rem;
    .slyde {
      min-width: 600px;
    }
  }
}
@media screen and (max-width: 576px) {
  .slyder-container {
    height: 287px;
    .slyde {
      min-width: 115%;

    }
  }

}

